[build-system]
requires = ["hatchling", "hatch-cython"]
build-backend = "hatchling.build"

[project]
name = "odict"
version = "2.0.0.dev0"
description = "Ordered Dictionary."
readme = "README.rst"
license = "PSF-2.0"
authors = [{name = "Node Contributors", email = "dev@conestack.org"}]
keywords = ["odict", "dict", "ordered", "dictionary", "mapping", "collection", "tree"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
build = [
    "hatch",
]

[project.urls]
Homepage = "https://github.com/conestack/odict"

[tool.hatch.build.targets.wheel]
packages = ["src/odict"]

[tool.hatch.build.targets.wheel.hooks.cython]
dependencies = ["hatch-cython"]

[tool.hatch.build.targets.wheel.hooks.cython.options]
directives = { language_level = 3, embedsignature = true }
compile_py = false

[tool.hatch.build.targets.wheel.hooks.cython.files]
targets = ["*.pyx"]

[tool.zest-releaser]
create-wheel = true

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
quote-style = "single"
