[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "odict"
version = "2.0.1.dev0"
description = "Ordered Dictionary."
dynamic = ["readme"]
requires-python = ">=3.10"
license = {text = "Python Software Foundation License"}
authors = [{name = "Node Contributors", email = "dev@conestack.org"}]
keywords = ["odict", "dict", "ordered", "dictionary", "mapping", "collection", "tree"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Python Software Foundation License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/conestack/odict"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"
fragments = [
    {path = "README.rst"},
    {text = "\n\n"},
    {path = "CHANGES.rst"},
    {text = "\n\n"},
    {path = "LICENSE.rst"},
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github/",
    "/Makefile",
    "/mx.ini",
]

[tool.hatch.build.targets.wheel]
packages = ["src/odict"]

[tool.zest-releaser]
create-wheel = true

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
quote-style = "single"
